WexGit/Wex_DX/force-app/main/default/objects/Account_Status_History__c/Account_Status_History__c.object-meta.xml
<CustomObject>
    <label>Account Status History</label>
    <nameField>
        <displayFormat>Ash-{00000}</displayFormat>
        <label>Account Status History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Account Status Histories</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>