WexGit/Wex_DX/force-app/main/default/objects/Account_Status_History__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Account Status Histories</relationshipLabel>
    <relationshipName>Account_Status_Histories</relationshipName>
    <type>Lookup</type>
</CustomField>