WexGit/Wex_DX/force-app/main/default/objects/Account_Status_History__c/fields/Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Account_Status__c</fullName>
    <label>Account Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Prospect</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
            </value>
            <value>
                <fullName>Terminated</fullName>
            </value>
            <value>
                <fullName>1 - Active</fullName>
            </value>
            <value>
                <fullName>3 - Stopped (blocked)</fullName>
            </value>
            <value>
                <fullName>4 - Closed</fullName>
            </value>
            <value>
                <fullName>5 - Write Off</fullName>
            </value>
            <value>
                <fullName>9 - Credit Limit Auto Lock</fullName>
            </value>
            <value>
                <fullName>Parent Controlled Lockout</fullName>
            </value>
            <value>
                <fullName>5 - Bad Debt Write Off</fullName>
            </value>
            <value>
                <fullName>3 - Stopped Credit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>