WexGit/Wex_DX/force-app/main/default/objects/Account_Status_History__c/fields/Auto_Limit_Increased__c.field-meta.xml
<CustomField>
    <fullName>Auto_Limit_Increased__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Limit Increased</label>
    <type>Checkbox</type>
</CustomField>