WexGit/Wex_DX/force-app/main/default/objects/Account_Status_History__c/fields/Month__c.field-meta.xml
<CustomField>
    <fullName>Month__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Month</label>
    <length>80</length>
    <type>Text</type>
</CustomField>